--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
     <div class="hero-container">
       <h1>Клінінгові послуги в Полтаві та області</h1>
       <h2>Професійна хімчистка - дбайливо, якісно та в зручний для Вас час</h2>
-      <a href="#about" class="btn-get-started">Дізнатися більше</a>
+	<div class="btn-row">
+  	<a href="#services" class="btn-get-started">Наші Послуги</a>
+  	<a href="#contact" class="btn-get-service">Замовити</a>
+	</div>
     </div>
   </section><!-- #hero -->
 
@@ -165,92 +168,71 @@
             </div>
           </div>
         </div>
-
+        	<div class="btn-row wow fadeInUp" data-wow-delay="0.6s">
+  		<a href="#contact" class="btn-get-service">Замовити</a>
+		</div>
+    </div>
       </div>
+
     </section><!-- #services -->
 
 
-    <!--==========================
-      Contact Section
-    ============================-->
-    <section id="contact">
-      <div class="container wow fadeInUp">
-        <div class="section-header">
-          <h3 class="section-title">Контакти</h3>
-          <p class="section-description">Замовити послугу, розрахувати вартість по фото або надіслати запит для послуги якої немає в переліку Ви можете тут</p>
+<!--==========================
+  Contact Section
+============================-->
+<section id="contact">
+  <div class="container wow fadeInUp">
+    <div class="section-header">
+      <h3 class="section-title">Контакти</h3>
+      <p class="section-description">
+        Замовити послугу, розрахувати вартість по фото або надіслати запит для послуги, якої немає в переліку, Ви можете тут
+      </p>
+    </div>
+  </div>
+
+  <div class="container wow fadeInUp mt-5">
+    <div class="row align-items-start">
+
+      <!-- Ліва колонка: карта -->
+      <div class="col-lg-8 col-md-6">
+        <div class="map-wrapper">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d82721.1626801863!2d34.54504792244252!3d49.615919673461676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d825e425e6ba6b%3A0xcf3e6bdfb9e4ca82!2z0J_QvtC70YLQsNCy0LAsINCf0L7Qu9GC0LDQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCAzNjAwMA!5e0!3m2!1suk!2sua!4v1744300834224!5m2!1suk!2sua" 
+            width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+      </div>
+
+      <!-- Права колонка: контакти -->
+      <div class="col-lg-4 col-md-6">
+        <div class="info">
+          <div>
+            <a href="tel:+380669139223"><i class="fa-solid fa-phone fa-beat-fade"></i>
+            <p>066 913 9223</p></a>
+          </div>
+          <div>
+            <a href="viber://chat?number=%2B380669139223"><i class="fa-brands fa-viber"></i>
+            <p>066 913 9223</p></a>
+          </div>
+          <div>
+            <a href="https://t.me/"><i class="fa-brands fa-telegram"></i>
+            <p>Telegram</p></a>
+          </div>
+          <div>
+            <a href="https://instagram.com/family_cleaning_plt/"><i class="fa-brands fa-instagram"></i>
+            <p>Instagram</p></a>
+          </div>
+            <div>
+            <a href="https://tiktok.com/@opalkova88"><i class="fa-brands fa-tiktok"></i>
+            <p>TikTok</p></a>
+          </div>
         </div>
       </div>
 
-      <!-- Uncomment below if you wan to use dynamic maps -->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d82721.1626801863!2d34.54504792244252!3d49.615919673461676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d825e425e6ba6b%3A0xcf3e6bdfb9e4ca82!2z0J_QvtC70YLQsNCy0LAsINCf0L7Qu9GC0LDQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCAzNjAwMA!5e0!3m2!1suk!2sua!4v1744300834224!5m2!1suk!2sua" width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+</section>
 
-      <div class="container wow fadeInUp mt-5">
-        <div class="row justify-content-center">
 
-          <div class="col-lg-3 col-md-4">
 
-            <div class="info">
-              <div>
-                <a href=tel:+380669139223><i class="fa-solid fa-phone fa-beat-fade"></i>
-                <p>066 913 9223</p></a>
-              </div>
-
-              <div>
-                <a href=viber://chat?number=%2B380669139223><i class="fa-brands fa-viber fa-beat-fade"></i>
-                <p>066 913 9223</p></a>
-              </div>
-
-              <div>
-                <a href=https://t.me/><i class="fa-brands fa-telegram fa-beat-fade"></i>
-                <p>Telegram</p></a>
-              </div>
-            
-              <div>
-                <a href=https://instagram.com><i class="fa-brands fa-instagram fa-beat-fade"></i>
-                <p>Instagram</p></a>
-              </div>
-            </div>
-
-            <!--div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-            </div-->
-
-          </div>
-
-          <div class="col-lg-5 col-md-8">
-            <div class="form">
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
-              <div id="errormessage"></div>
-              <form action="https://formspree.io/f/mgvarryn" method="post" role="form" class="contactForm">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Ваше Ім'я" data-rule="minlen:4" data-msg="Не менше чотирьох символів" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Ел. пошта" data-rule="email" data-msg="Вкажіть дійсну електрону пошту" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Номер телефону" data-rule="minlen:4" data-msg="Ваш номер телефону для зворотного зв'язку" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Напишіть нам!" placeholder="Текст повідомлення"></textarea>
-                  <div class="validation"></div>
-                </div>
-                <div class="text-center"><button type="submit">Надіслати повідомлення</button></div>
-              </form>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- #contact -->
 
   </main>
 
@@ -266,7 +248,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Family</strong>Cleaning
+       2025 &copy; <strong>Family</strong>Cleaning
       </div>
     </div>
   </footer><!-- #footer -->
