--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="img/logo.png" alt="" title="" /></img></a>
+        <a href="#hero"><img src="img/logo.svg" alt="" title="" /></img></a>
         <!-- Uncomment below if you prefer to use a text logo -->
         <!--<h1><a href="#hero">Family Cleaning</a></h1>-->
       </div>
@@ -305,5 +305,6 @@
 
 </body>
 </html>
+
 
 
