--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Family Cleaning</title>
+  <title>Клінінгові послуги у Полтаві | Family Cleaning</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="клінінг Полтава, прибирання Полтава, хімчистка меблів Полтава, прибирання після ремонту Полтава, клінінгова компанія, Family Cleaning" name="keywords">
+  <meta content="Хімчистка меблів, чистка салону авто та професійне прибирання у Полтаві. Сучасні безпечні засоби, ввічливий сервіс та помірні ціни." name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -305,6 +305,7 @@
 
 </body>
 </html>
+
 
 
 
