--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <meta content="Хімчистка меблів, чистка салону авто та професійне прибирання у Полтаві. Сучасні безпечні засоби, ввічливий сервіс та помірні ціни." name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="manifest" href="lib/site.webmanifest">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -272,6 +274,7 @@
 
 </body>
 </html>
+
 
 
 
