--- a/index.html
+++ b/index.html
@@ -92,20 +92,26 @@
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa-solid fa-star"></i></div>
-              <h4 class="title">Якісно</h4>
+               <div class="text">
+               <h4 class="title">Якісно</h4>
               <p class="description">Основна наша перевага. Послуги з прибирання завжди виконуємо на совість, аби Ви були задоволені.</p>
+               </div>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa-solid fa-hand-sparkles"></i></div>
+               <div class="text">
               <h4 class="title">Професійно</h4>
               <p class="description">Миючі засоби німецьких та українських професійних виробників. Гіпоалергенні засоби для м'яких меблів</p>
+               </div>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa-solid fa-piggy-bank"></i></div>
+               <div class="text">
               <h4 class="title">Доступно</h4>
               <p class="description">Пропонуємо чесні ціни без прихованих доплат — якість, яку можна собі дозволити.</p>
+               </div>
             </div>
 
           </div>
@@ -250,7 +256,7 @@
 
     <div class="container">
       <div class="copyright">
-       2025 &copy; <strong>family</strong>Cleaning
+       2025 &copy; <strong>Family</strong>Cleaning
       </div>
     </div>
   </footer><!-- #footer -->
@@ -267,16 +273,11 @@
   <script src="lib/counterup/counterup.min.js"></script>
   <script src="lib/superfish/hoverIntent.js"></script>
   <script src="lib/superfish/superfish.min.js"></script>
-	
+
+
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 
 </body>
 </html>
-
-
-
-
-
-
