--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="клінінг Полтава, прибирання Полтава, хімчистка меблів Полтава, прибирання після ремонту Полтава, клінінгова компанія, Family Cleaning" name="keywords">
   <meta content="Хімчистка меблів, чистка салону авто та професійне прибирання у Полтаві. Сучасні безпечні засоби, ввічливий сервіс та помірні ціни." name="description">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <!-- Favicons -->
 <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
@@ -281,3 +282,4 @@
 
 </body>
 </html>
+
