--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="icon"><i class="fa-solid fa-star"></i></div>
                <div class="text">
                <h4 class="title">Якісно</h4>
-              <p class="description">Основна наша перевага. Послуги з прибирання завжди виконуємо на совість, аби Ви були задоволені.</p>
+              <p class="description">Основна наша перевага. Працюємо завжди на совість, аби Ви були задоволені.</p>
                </div>
             </div>
 
@@ -103,7 +103,7 @@
               <div class="icon"><i class="fa-solid fa-hand-sparkles"></i></div>
                <div class="text">
               <h4 class="title">Професійно</h4>
-              <p class="description">Миючі засоби німецьких та українських професійних виробників. Гіпоалергенні засоби для м'яких меблів</p>
+              <p class="description">Миючі засоби німецьких та українських виробників. Гіпоалергенні для м'яких меблів</p>
                </div>
             </div>
 
@@ -282,4 +282,5 @@
 
 </body>
 </html>
+
 
