--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="icon"><i class="fa-solid fa-hand-sparkles"></i></div>
                <div class="text">
               <h4 class="title">Професійно</h4>
-              <p class="description">Миючі засоби німецьких та українських виробників. Гіпоалергенні для м'яких меблів</p>
+              <p class="description">Миючі препарати німецьких та українських виробників. Гіпоалергенні засоби для м'яких меблів.</p>
                </div>
             </div>
 
@@ -282,5 +282,6 @@
 
 </body>
 </html>
+
 
 
