--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
               <div class="icon"><i class="fa-solid fa-car-side"></i></div>
-              <h4 class="title">Хімчистка салона авто</h4>
+              <h4 class="title">Хімчистка салону авто</h4>
               <p class="description">Професійне очищення всього салону авто: сидіння, обшивка, стеля. Оновіть інтер’єр для приємної атмосфери в дорозі</p>
             </div>
           </div>
@@ -282,6 +282,7 @@
 
 </body>
 </html>
+
 
 
 
